// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modal click on close button should close the modal 1`] = `
<div>
  <div
    data-test-id="modal"
    style="position: fixed; top: 0px; left: 0px; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.5); display: flex; justify-content: center; align-items: center; z-index: 10000;"
  >
    <div
      style="width: 600px; background-color: rgb(255, 255, 255); border-radius: 0.5rem; box-shadow: 0 0 10px 0 rgba(0,0,0,0.2); padding: 1rem; z-index: 10; position: relative;"
    >
      <h3
        style="font-weight: 700; font-size: 1.5rem; line-height: 2rem; text-align: center;"
      >
        Modal Title
      </h3>
      <p
        style="padding-top: 1rem; padding-bottom: 1rem; text-align: center;"
      >
        Modal Body
      </p>
      <div
        class="closeTopRight"
        style="position: absolute; top: -0.5rem; right: -0.6rem; z-index: 10; display: flex; justify-content: center; align-items: center;"
      >
        <button
          data-testid="closeButton"
          style="cursor: pointer; font-size: 1rem; width: 30px; height: 30px; text-align: center; color: rgb(255, 255, 255); border-radius: 50%;"
        >
          x
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`modal press ESC key should close the modal 1`] = `
<div>
  <div
    data-test-id="modal"
    style="position: fixed; top: 0px; left: 0px; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.5); display: flex; justify-content: center; align-items: center; z-index: 10000;"
  >
    <div
      style="width: 600px; background-color: rgb(255, 255, 255); border-radius: 0.5rem; box-shadow: 0 0 10px 0 rgba(0,0,0,0.2); padding: 1rem; z-index: 10; position: relative;"
    >
      <h3
        style="font-weight: 700; font-size: 1.5rem; line-height: 2rem; text-align: center;"
      >
        Modal Title
      </h3>
      <p
        style="padding-top: 1rem; padding-bottom: 1rem; text-align: center;"
      >
        Modal Body
      </p>
      <div
        class="closeTopRight"
        style="position: absolute; top: -0.5rem; right: -0.6rem; z-index: 10; display: flex; justify-content: center; align-items: center;"
      >
        <button
          data-testid="closeButton"
          style="cursor: pointer; font-size: 1rem; width: 30px; height: 30px; text-align: center; color: rgb(255, 255, 255); border-radius: 50%;"
        >
          x
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`modal should render modal with default type 1`] = `
<div>
  <div
    data-test-id="modal"
    style="position: fixed; top: 0px; left: 0px; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.5); display: flex; justify-content: center; align-items: center; z-index: 10000;"
  >
    <div
      style="width: 600px; background-color: rgb(255, 255, 255); border-radius: 0.5rem; box-shadow: 0 0 10px 0 rgba(0,0,0,0.2); padding: 1rem; z-index: 10; position: relative;"
    >
      <h3
        style="font-weight: 700; font-size: 1.5rem; line-height: 2rem; text-align: center;"
      >
        Modal Title
      </h3>
      <p
        style="padding-top: 1rem; padding-bottom: 1rem; text-align: center;"
      >
        Modal Body
      </p>
    </div>
  </div>
</div>
`;

exports[`modal should render modal with type comfirmation 1`] = `
<div>
  <div
    data-test-id="modal"
    style="position: fixed; top: 0px; left: 0px; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.5); display: flex; justify-content: center; align-items: center; z-index: 10000;"
  >
    <div
      style="width: 600px; background-color: rgb(255, 255, 255); border-radius: 0.5rem; box-shadow: 0 0 10px 0 rgba(0,0,0,0.2); padding: 1rem; z-index: 10; position: relative;"
    >
      <h3
        style="font-weight: 700; font-size: 1.5rem; line-height: 2rem; text-align: center;"
      >
        Modal Title
      </h3>
      <p
        style="padding-top: 1rem; padding-bottom: 1rem; text-align: center;"
      >
        Modal Body
      </p>
    </div>
  </div>
</div>
`;

exports[`modal should render modal with type componentInside 1`] = `
<div>
  <div
    data-test-id="modal"
    style="position: fixed; top: 0px; left: 0px; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.5); display: flex; justify-content: center; align-items: center; z-index: 10000;"
  >
    <div
      style="width: 600px; background-color: rgb(255, 255, 255); border-radius: 0.5rem; box-shadow: 0 0 10px 0 rgba(0,0,0,0.2); padding: 1rem; z-index: 10; position: relative;"
    >
      <h3
        style="font-weight: 700; font-size: 1.5rem; line-height: 2rem; text-align: center;"
      >
        Modal Title
      </h3>
      <p
        style="padding-top: 1rem; padding-bottom: 1rem; text-align: center;"
      >
        Modal Body
      </p>
      <div
        style="padding-top: 1rem; padding-bottom: 1rem;"
      >
        <div>
          test
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`modal should render modal with type formulaire 1`] = `
<div>
  <div
    data-test-id="modal"
    style="position: fixed; top: 0px; left: 0px; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.5); display: flex; justify-content: center; align-items: center; z-index: 10000;"
  >
    <div
      style="width: 600px; background-color: rgb(255, 255, 255); border-radius: 0.5rem; box-shadow: 0 0 10px 0 rgba(0,0,0,0.2); padding: 1rem; z-index: 10; position: relative;"
    >
      <h3
        style="font-weight: 700; font-size: 1.5rem; line-height: 2rem; text-align: center;"
      >
        Modal Title
      </h3>
      <p
        style="padding-top: 1rem; padding-bottom: 1rem; text-align: center;"
      >
        Modal Body
      </p>
      <form
        style="display: flex; flex-direction: column; gap: 2%; margin-bottom: 15px;"
      >
        <label
          for="Nom"
        >
          Nom
        </label>
        <input
          placeholder="Nom"
          style="padding: 10px 20px; border-radius: 5px; font-size: 16px;"
          type="text"
        />
        <label
          for="Prénom"
        >
          Prénom
        </label>
        <input
          placeholder="Prénom"
          style="padding: 10px 20px; border-radius: 5px; font-size: 16px;"
          type="text"
        />
        <label
          for="Email"
        >
          Email
        </label>
        <input
          placeholder="Email"
          style="padding: 10px 20px; border-radius: 5px; font-size: 16px;"
          type="text"
        />
        <label
          for="Téléphone"
        >
          Téléphone
        </label>
        <input
          placeholder="Téléphone"
          style="padding: 10px 20px; border-radius: 5px; font-size: 16px;"
          type="text"
        />
        <button
          style="background-color: green; border-radius: 5px; padding: 10px 20px; font-size: 16px; cursor: pointer; margin-top: 15px;"
        >
          Ok
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`modal should render modal with type success 1`] = `
<div>
  <div
    data-test-id="modal"
    style="position: fixed; top: 0px; left: 0px; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.5); display: flex; justify-content: center; align-items: center; z-index: 10000;"
  >
    <div
      style="width: 600px; background-color: rgb(255, 255, 255); border-radius: 0.5rem; box-shadow: 0 0 10px 0 rgba(0,0,0,0.2); padding: 1rem; z-index: 10; position: relative;"
    >
      <h3
        style="font-weight: 700; font-size: 1.5rem; line-height: 2rem; text-align: center;"
      >
        Modal Title
      </h3>
      <p
        style="padding-top: 1rem; padding-bottom: 1rem; text-align: center;"
      >
        Modal Body
      </p>
    </div>
  </div>
</div>
`;
